allow the links to wrap to stop them escaping from the container

--- a/MaterialsWall/Content/card.css
+++ b/MaterialsWall/Content/card.css
@@ -36,6 +36,7 @@
 
 .card .data .value {
     margin-left: 20px;
+    word-wrap: break-word;
 }
 
 .materialname {
